# docs/swagger.json
@@ -1988,6 +1988,9 @@
                 "remark": {
                     "type": "string"
                 },
+                "son_service": {
+                    "type": "string"
+                },
                 "steps": {
                     "type": "array",
                     "items": {
@@ -2425,6 +2428,9 @@
                     "type": "string"
                 },
                 "remark": {
+                    "type": "string"
+                },
+                "son_service": {
                     "type": "string"
                 },
                 "started_at": {
